--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div class="body-container">
-    <app-header></app-header>
-    <div class="content">
-        <app-sidebar></app-sidebar>
-        <router-outlet></router-outlet>
+    <app-header (toggleSidebar)="onToggleSidebar()" class="toolbar"></app-header>
+    <div class="body-content">
+        <div class="sidebar-content">
+            <app-sidebar [isSidebarOpen]="isSidebarOpen" class="sidebar"></app-sidebar>
+        </div>
+        <div class="custom-content">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
