--- a/src/styles.scss
+++ b/src/styles.scss
@@ -52,6 +52,10 @@ h5 {
   line-height: 20px!important;
 }
 p, a, button, input {
-  font-size: 17px!important;
-  line-height: 22px!important;
+  font-size: 15px!important;
+  line-height: 20px!important;
+}
+
+.mat-h4, .mat-body-1, .mat-typography .mat-h4, .mat-typography .mat-body-1, .mat-typography h4 {
+  all: unset;
 }
