--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,20 @@
-<p>Home Page</p>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1><h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+<h1>Hola home</h1>
+
