--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,36 +1,47 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html, body {
-    height: 100%;
+  height: 100%;
 }
 body {
-    margin: 0;
-    font-family: Roboto, "Helvetica Neue", sans-serif;
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 .body-container {
-    .body-content {
-        display:  flex;
+  .body-content {
+    display:  flex;
 
-        .sidebar-content {
-            .sidebar {
-                position: fixed;
-                height: calc(100vh - 112px);
-                top: 112px;
-            }
-            @media (min-width: 1024px) {
-                width: 349px;
-            }
-        }
-        .custom-content {
-            width: calc(100% - 349px);
-            padding: 20px;
-        }
+    .sidebar-content {
+      .sidebar {
+        position: fixed;
+        height: calc(100vh - 112px);
+        top: 112px;
+        z-index: 9;
+      }
+      @media (min-width: 1024px) {
+        width: 349px;
+      }
     }
+    .custom-content {
+      width: calc(100% - 349px);
+      padding: 30px;
+    }
+    @media(max-width: 1024px) {
+      .custom-content {
+        width: 100%;
+        padding: 20px;
+      }
+    }
+  }
+
 
 }
-
 h1 {
   font-size: 35px!important;
   line-height: 40px!important;
@@ -56,6 +67,3 @@ p, a, button, input {
   line-height: 20px!important;
 }
 
-.mat-h4, .mat-body-1, .mat-typography .mat-h4, .mat-typography .mat-body-1, .mat-typography h4 {
-  all: unset;
-}
