feat: filters button working and more data to db.json added

--- a/src/app/components/forum/post-list/post-list.component.html
+++ b/src/app/components/forum/post-list/post-list.component.html
@@ -13,7 +13,7 @@
     </div>
     <p class="font-medium">Publication: <span class="font-normal">{{ post.publication_date }}</span></p>
     <p class="font-medium">Subject: <span class="font-normal">{{ post.subject }}</span></p>
-    <p class="text-pretty">Dear Hope ConnectLink,<br/>
+    <p class="text-pretty description">Dear Hope ConnectLink,<br/>
       {{ post.description }}
     </p>
     <div class="flex flex-row gap-8 items-center flex-wrap">
