--- a/src/app/components/forum/post-list/post-list.component.scss
+++ b/src/app/components/forum/post-list/post-list.component.scss
@@ -10,3 +10,12 @@ h1, h2, h3, h4, h5, h6, p, a {
   border-radius: 50%;
   object-fit: cover;
 }
+
+.description {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.5;
+}
