feat: refresh button clean inputs and add styles to containers

--- a/src/app/components/thread/comment-list/comment-list.component.scss
+++ b/src/app/components/thread/comment-list/comment-list.component.scss
@@ -8,3 +8,7 @@ h1, h2, h3, h4, h5, h6, p, a {
   border-radius: 50%;
   object-fit: cover;
 }
+
+.comment-container {
+  background-color: #F1F9F2;
+}
