--- a/src/app/pages/thread/thread.component.html
+++ b/src/app/pages/thread/thread.component.html
@@ -1,5 +1,5 @@
 <section>
-  <article class="bg-slate-100 p-4 flex flex-col gap-5 rounded-lg">
+  <article class="author-container bg-slate-100 p-4 flex flex-col gap-5 rounded-lg">
     <div class="flex flex-row justify-between">
       <div class="flex flex-row gap-3">
         <img class="example-header-image" [src]="post.profile_img">
