--- a/src/app/components/thread/comment-list/comment-list.component.html
+++ b/src/app/components/thread/comment-list/comment-list.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-5 mt-2">
-  <article *ngFor="let comment of comments" class="bg-slate-100 p-4 flex flex-col gap-5 rounded-lg">
+  <article *ngFor="let comment of comments" class="comment-container bg-slate-100 p-4 flex flex-col gap-5 rounded-lg">
     <div class="flex flex-row justify-between">
       <div class="flex flex-row gap-3">
         <img class="example-header-image" [src]="comment.imageURL">
@@ -11,14 +11,14 @@
       <ng-container *ngIf="comment.type === 'specialist'; else nonSpecialist">
         <div class="flex flex-row gap-3 items-center">
           <p>Specialist</p>
-          <mat-icon class="cursor-pointer font-medium text-xl w-0 h-0 mb-1.5 hover:scale-125 transition-all duration-300 ease-out mt-0.5"
+          <mat-icon class="cursor-pointer text-green-900 font-medium text-xl w-0 h-0 mb-1.5 hover:scale-125 transition-all duration-300 ease-out mt-0.5"
                     fontIcon="verified"></mat-icon>
         </div>
       </ng-container>
       <ng-template #nonSpecialist>
         <div class="flex flex-row gap-3 items-center">
           <p>Active user</p>
-          <mat-icon class="cursor-pointer font-medium text-xl w-0 h-0 mb-1.5 hover:scale-125 transition-all duration-300 ease-out mt-0.5"
+          <mat-icon class="cursor-pointer text-blue-900 font-medium text-xl w-0 h-0 mb-1.5 hover:scale-125 transition-all duration-300 ease-out mt-0.5"
                     fontIcon="person"></mat-icon>
         </div>
       </ng-template>
@@ -30,7 +30,7 @@
       <div class="flex flex-row flex-wrap gap-5 items-center">
         <button
           class="flex items-center border-[1px] border-slate-800 bg-slate-100 text-slate-950
-              gap-1 px-4 py-1.5 rounded-2xl tracking-wider hover:bg-cyan-100 transition-all duration-300 ease">
+              gap-1 px-4 py-1.5 rounded-2xl tracking-wider hover:bg-slate-200 transition-all duration-300 ease">
           See profile
           <mat-icon class="text-xl w-0 h-0 mb-1" fontIcon="person_search"></mat-icon>
         </button>
