--- a/src/app/pages/thread/thread.component.scss
+++ b/src/app/pages/thread/thread.component.scss
@@ -21,3 +21,8 @@ h4 {
   font-size: 1.1rem !important;
   font-weight: 500;
 }
+
+.author-container {
+  background-color: #EEFEFF;
+  border: 1px solid #DDDDDD;
+}
