--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,20 +1,5 @@
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1><h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
-<h1>Hola home</h1>
+<app-slider></app-slider>
+<h1>New posts</h1>
+<app-post></app-post>
+
 
