--- a/src/styles.scss
+++ b/src/styles.scss
@@ -67,3 +67,6 @@ p, a, button, input {
   line-height: 20px!important;
 }
 
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
