update: responsive event component

--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -1,7 +1,7 @@
 <section class="h-full relative">
   <div class="events-container flex flex-col gap-4">
-    <div class="flex flex-row">
-      <div class="flex flex-col gap-4 justify-between w-full">
+    <div class="flex flex-row justify-between gap-4 flex-wrap">
+      <div class="flex flex-col gap-4">
         <h3>Events</h3>
         <p>Join and participate in various events created by different specialists</p>
       </div>
