--- a/src/app/components/info-events/info-events.component.html
+++ b/src/app/components/info-events/info-events.component.html
@@ -17,7 +17,7 @@
 
   <ng-container matColumnDef="specialistId">
     <th mat-header-cell *matHeaderCellDef> Specialist ID </th>
-    <td mat-cell *matCellDef="let element"> {{element.specialistId}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.idSpecialist}} </td>
   </ng-container>
 
   <!-- Weight Column -->
