--- a/src/app/pages/analytics/analytics.component.html
+++ b/src/app/pages/analytics/analytics.component.html
@@ -1,99 +1,1 @@
-<section>
-  <div class="flex flex-col gap-4">
-    <h3>Analytics</h3>
-    <p>Here, you'll find a sanctuary where you can delve into the statistics and progress of mental health</p>
-    <div class="analytics-container mt-3">
-      <div class="stats border">
-        <div class="flex flex-col gap-5 p-5">
-          <h5 class="font-bold">Current stats:</h5>
-          <ul class="flex flex-col gap-5">
-            <li class="flex flex-row items-center justify-between">
-              <p>Time</p>
-              <p>13% ahead of schedule</p>
-            </li>
-            <li class="flex flex-row items-center justify-between">
-              <p>Tasks</p>
-              <p>6 task to be completed</p>
-            </li>
-            <li class="flex flex-row items-center justify-between">
-              <p>Workload</p>
-              <p>0 tasks overdue</p>
-            </li>
-            <li class="flex flex-row items-center justify-between">
-              <p>Progress</p>
-              <p>33.33% complete</p>
-            </li>
-            <li class="flex flex-row items-center justify-between">
-              <p>Cost</p>
-              <p>35% under buget</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="tasks border">
-        <div class="flex flex-col gap-5 p-5 w-full">
-          <h5>Tasks</h5>
-          <div class="flex flex-row gap-3">
-            <p>To-Do (3)</p>
-            <p>In progress (3)</p>
-            <p>Done (3)</p>
-          </div>
-          <div class="flex-1 h-full pt-2 self-center">
-            <figure class="chart-three animate">
-              <svg role="img" xmlns="http://www.w3.org/2000/svg">
-                <title>Hola soy titulo</title>
-                <desc>Prueba texto</desc>
-                <circle class="circle-background"/>
-                <circle class="circle-foreground"/>
-              </svg>
-              <figcaption>100% of all males like donuts.</figcaption>
-            </figure>
-          </div>
-        </div>
-      </div>
-      <div class="payments border">
-        <div class="flex flex-col gap-5 p-5">
-          <h5>Expected payments</h5>
-          <ul class="flex flex-col gap-5 w-full h-full justify-start">
-            <li class="flex flex-row gap-3 border items-center justify-between">
-              <p class="">Suscription</p>
-              <mat-progress-bar style="max-width: 250px" mode="determinate" value="20"></mat-progress-bar>
-            </li>
-            <li class="flex flex-row gap-3 border items-center justify-between">
-              <p class="">Quotes</p>
-              <mat-progress-bar style="max-width: 250px" mode="determinate" value="50"></mat-progress-bar>
-            </li>
-            <li class="flex flex-row gap-3 border items-center justify-between">
-              <p class="">Events</p>
-              <mat-progress-bar style="max-width: 250px" mode="determinate" value="30"></mat-progress-bar>
-            </li>
-            <li class="flex flex-row gap-3 border items-center justify-between">
-              <p class="">Registers</p>
-              <mat-progress-bar style="max-width: 250px" mode="determinate" value="80"></mat-progress-bar>
-            </li>
-          </ul>
-        </div>
-      </div>
-      <div class="progress border h-full">
-        <div class="flex flex-col gap-5 p-5 pb-0 h-full">
-          <h4 class="">Progress:</h4>
-          <p>See the progress of your mental health</p>
-          <div>
-            <div echarts [options]="options1" class="demo-chart"></div>
-          </div>
-        </div>
-      </div>
-      <div class="cost border">
-        <div class="flex flex-col gap-5 p-5 pb-0 h-full">
-          <h4 class="">Costs:</h4>
-          <div class="block">
-            <div class="button-groups">
-              <button (click)="RandomDataset()" nz-button nzType="default">Random Dataset</button>
-            </div>
-            <div echarts [options]="options" [merge]="mergeOptions" class="demo-chart"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
+<app-analytics-content></app-analytics-content>
