--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,6 +31,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     .custom-content {
       width: calc(100% - 349px);
       padding: 30px;
+      min-height: calc(100vh - 112px);
     }
     @media(max-width: 1024px) {
       .custom-content {
@@ -68,9 +69,5 @@ p, a, button, input {
 }
 
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-
-
-html, body { height: 100%; }
+html, body { min-height: 100vh; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
