--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,20 +1,34 @@
-<div *ngFor="let item of data">
-  @if(item.posts?.length > 0) {
-    <mat-card class="flex flex-col px-[10px] py-[15px] card roundede-[5px] cursor-hover" (click)="goToPage('/forums/' + item.id)">
-      <mat-card-header class="flex items-center">
-          <img class="w-[50px] h-[50px] rounded-full mr-[15px]" mat-card-image src="{{item.urlImage}}" alt=""/>
-          <div class="ml-15px cardHeader">
-              <p class="mb-0 text-sm">{{item.firstName + " " + item.lastName}}</p>
-              <p class="mb-0 text-sm text-[#C2C2C2]">{{item.email}}</p>
-          </div>
-      </mat-card-header>
-      <mat-card-content class="cardContent">
-          <ng-container *ngFor="let post of item.posts">
-            <p> <strong>Subject:</strong>  {{post.title}}</p>
-            <p>{{post.description}}</p>
-          </ng-container>
-      </mat-card-content>
-    </mat-card>
-    }
-</div>
+<div class="flex flex-col gap-5">
+  <article *ngFor="let post of data" class="bg-slate-100 p-4 gap-5 flex flex-col rounded-xl ">
+    <div class="flex flex-row justify-between">
+      <div class="flex flex-row gap-3">
+        <img class="example-header-image" [src]="post.profile_img">
+        <div class="flex flex-col justify-center gap-1">
+          <p class="text-sm font-normal">{{ post.name }}</p>
+          <span class="text-sm font-light text-gray-500">{{ post.email }}</span>
+        </div>
+      </div>
+    </div>
+    <p class="font-medium">Publication: <span class="font-normal">{{ post.publication_date }}</span></p>
+    <p class="font-medium">Subject: <span class="font-normal">{{ post.subject }}</span></p>
+    <p class="text-pretty description">Dear Hope ConnectLink,<br/>
+      {{ post.description }}
+    </p>
+    <div class="flex flex-row gap-8 items-center flex-wrap">
+      <div class="flex flex-row gap-2 items-center">
+        <span>{{ post.likes_quantity }}</span>
+        <mat-icon class="text-xl w-0 h-0 mb-1" fontIcon="thumb_up_alt"></mat-icon>
+      </div>
+      <div class="flex flex-row gap-2 items-center">
+        <span>{{ post.comments_quantity }}</span>
+        <mat-icon class="text-xl w-0 h-0 mb-1" fontIcon="comment"></mat-icon>
+      </div>
+      <div class="flex flex-row gap-2 items-center">
+        <span>Compartir</span>
+        <mat-icon class="text-xl w-0 h-0 mb-1" fontIcon="share"></mat-icon>
+      </div>
+    </div>
+  </article>
 
+
+</div>
