update: specialist profile view styles to responsive perfomance

--- a/src/app/components/specialist/user-reviews/user-reviews.component.html
+++ b/src/app/components/specialist/user-reviews/user-reviews.component.html
@@ -1,5 +1,5 @@
-<section>
-    <h2>User Reviews:</h2>
+<section class="mt-8">
+    <h3>User Reviews:</h3>
 
     <div class="flex flex-col gap-[20px]" >
         <mat-card class="flex flex-col gap-[25px] px-[10px] py-[15px] card roundede-[5px]" *ngFor="let review of specialistReviewData">
