--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,7 @@
   <span class="spacer"></span>
   <div class="flex flex-row gap-3">
     <div mat-card-avatar class="example-header-image"></div>
-    <div class="flex flex-col justify-center gap-1.5">
+    <div class="flex flex-col justify-center gap-1.5 items-center">
       <p class="text-base font-medium tracking-wide">Sebastian Hotman</p>
       <div class="flex flex-row items-center gap-4">
         <p class="text-sm text-green-600 font-normal">Healt for All</p>
