--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,7 +1,12 @@
+h1, h2, h3, h4, h5, h6, p, a {
+  margin: 0;
+  padding: 0;
+}
+
 .spacer {
     flex: 1 1 auto;
   }
-  
+
   .header {
     height: 7rem;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.2);
@@ -10,28 +15,23 @@
     z-index: 100;
     padding: 0 20px;
   }
-  
-  .example-header-image {
+
+  .header .example-header-image {
+    margin: 0 !important;
     background-image: url('https://avatars.githubusercontent.com/u/129230632?v=4');
     background-size: cover;
     width: 3rem;
     height: 3rem;
     border-radius: 50%;
   }
-  
+
   .hamburguer {
     display: none;
   }
-  
-  h1, h2, h3, h4, h5, h6, p, a {
-    margin: 0;
-    padding: 0;
-  }
-  
+
   @media (max-width: 1024px) {
-  
+
     .hamburguer {
       display: block;
     }
   }
-  
