--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -4,18 +4,22 @@
         <img class="w-14 h-14" src="assets/logo-connectionlink.png">
         <h1 class="logo-title font-lora">ConnectionLink</h1>
       </div>
-      <form class="flex flex-col py-8 px-5 sm:py-10 sm:px-14 w-full items-stretch bg-white drop-shadow-md">
+      <form class="flex flex-col py-8 px-5 sm:py-10 sm:px-14
+          w-full items-stretch bg-white drop-shadow-md"
+          (ngSubmit)="handleSubmitLogin()"
+        >
         <h4 class="text-blue-600 self-center">Welcome!</h4>
         <div class="flex flex-col gap-5 mb-3 mt-12">
           <input class="p-3 border-slate-300 rounded-2xl border-[1px] indent-1"
-                 type="text" placeholder="Email" autocomplete="on">
+                 type="text" placeholder="Email" autocomplete="on"
+                 name="email" [(ngModel)]="email">
           <input class="p-3 border-slate-300 rounded-2xl border-[1px] indent-1"
-                 type="password" placeholder="Password" autocomplete="on">
+                 type="password" placeholder="Password" autocomplete="on"
+                 name="password" [(ngModel)]="password">
         </div>
         <p class="text-slate-600 self-end cursor-pointer hover:text-blue-600 italic transition-all duration-200 ease-in-out">Forgot your password?</p>
         <button class="font-normal tracking-wider bg-sky-300 w-full mx-auto max-w-[200px] text-white self-center py-3.5 mt-8
-          rounded-3xl hover:bg-sky-400 transition-all duration-300 ease-in-out"
-          (click)="navigateToHome()">
+          rounded-3xl hover:bg-sky-400 transition-all duration-300 ease-in-out" type="submit">
           Log in
         </button>
       </form>
