--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -8,31 +8,37 @@
       <h5 class="text-center self-center">Revolutionize mental health advocacy with precise analytics</h5>
       <form class="flex flex-col gap-5 mb-3 mt-3" (ngSubmit)="onSubmitRegister()">
         <div class="flex flex-col sm:flex-row gap-3">
-          <input name="firstName" [(ngModel)]="formValues.firstName"
+          <input name="firstName" [(ngModel)]="form.firstName"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1 flex-1"
                  type="text" placeholder="First Name" autocomplete="on">
-          <input name="lastName" [(ngModel)]="formValues.lastName"
+          <input name="lastName" [(ngModel)]="form.lastName"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1 flex-1"
                  type="text" placeholder="Last Name" autocomplete="on">
         </div>
-        <div *ngIf="formValues.userType === 'patient'" class="flex flex-col gap-5">
-          <input name="email" [(ngModel)]="formValues.email"
+        <div *ngIf="form.role === 'patient'" class="flex flex-col gap-5">
+          <input name="phone" [(ngModel)]="form.phone"
+                 class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1 flex-1"
+                 type="text" placeholder="Phone Number" autocomplete="on">
+          <input name="email" [(ngModel)]="form.email"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1"
-                 type="text" placeholder="Personal Email" autocomplete="on">
-          <input name="password" [(ngModel)]="formValues.password"
+                 type="email" placeholder="Personal Email" autocomplete="on">
+          <input name="password" [(ngModel)]="form.password"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1"
                  type="password" placeholder="Password" autocomplete="on">
           <input name="confirmPassword" [(ngModel)]="confirmPassword"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1"
                  type="password" placeholder="Confirm Password" autocomplete="on">
         </div>
-        <div *ngIf="formValues.userType === 'specialist'" class="flex flex-col gap-5">
-          <input name="email" [(ngModel)]="formValues.email"
-                 class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1" type="text"
+        <div *ngIf="form.role === 'specialist'" class="flex flex-col gap-5">
+          <input name="phone" [(ngModel)]="form.phone"
+                 class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1 flex-1"
+                 type="text" placeholder="Phone Number" autocomplete="on">
+          <input name="email" [(ngModel)]="form.email"
+                 class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1" type="email"
                  placeholder="Institution Email" autocomplete="on">
           <input class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1"
                  type="text" placeholder="Attach CV" autocomplete="on">
-          <input name="password" [(ngModel)]="formValues.password"
+          <input name="password" [(ngModel)]="form.password"
                  class="p-3.5 border-slate-300 rounded-2xl border-[1px] indent-1"
                  type="password" placeholder="Password" autocomplete="on">
           <input name="confirmPassword" [(ngModel)]="confirmPassword"
@@ -42,12 +48,12 @@
         <div class="flex flex-row items-center justify-center gap-8 mt-3">
           <div class="flex flex-row gap-2 items-center">
             <input class="radio-input" type="radio" id="patient" name="type_user" value="patient" autocomplete="on"
-                   [(ngModel)]="formValues.userType"/>
+                   [(ngModel)]="form.role"/>
             <label class="radio-label" for="patient">Patient</label>
           </div>
           <div class="flex flex-row gap-2 items-center">
             <input class="radio-input" type="radio" id="specialist" name="type_user" value="specialist" autocomplete="on"
-                   [(ngModel)]="formValues.userType"/>
+                   [(ngModel)]="form.role"/>
             <label class="radio-label" for="specialist">Specialist</label>
           </div>
         </div>
