feat: add user authentication and display data based on user role :8ball:

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,6 +3,11 @@ h1, h2, h3, h4, h5, h6, p, a {
   padding: 0;
 }
 
+.title-logo {
+  font-weight: 500 !important;
+  font-size: 1.1rem !important;
+}
+
 .spacer {
     flex: 1 1 auto;
   }
