--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,9 +4,9 @@
       <mat-icon (click)="toggleSidebar.emit()" class="hamburguer flex font-medium cursor-pointer text-2xl w-0 h-0 -mt-1.5 text-green-800"
                 aria-label="menu icon" fontIcon="menu"></mat-icon>
       <img class="block h-12 w-12" src="../../../assets/logo-connectionlink.png" alt="logoAidManager"/>
-      <div class="flex flex-col justify-center gap-0.5 mb-0.5">
-        <p class="text-md font-medium tracking-wide">ConnectionLink</p>
-        <span class="text-sm text-slate-500 font-normal">For Everybody</span>
+      <div class="flex flex-col justify-center gap-1 mt-0.5">
+        <p class="title-logo text-md font-medium tracking-wide">ConnectionLink</p>
+        <span class="text-sm text-blue-800 font-normal capitalize">as {{ user?.role }}</span>
       </div>
     </div>
   </div>
@@ -14,9 +14,9 @@
   <div class="flex flex-row gap-3">
     <div mat-card-avatar class="example-header-image"></div>
     <div class="flex flex-col justify-center gap-1.5">
-      <p class="text-base font-medium tracking-wide">Sebastian Hotman</p>
+      <p class="text-base font-medium tracking-wide">{{ user?.firstName + ' ' + user?.lastName }}</p>
       <div class="flex flex-row items-center gap-4">
-        <p class="text-sm text-green-600 font-normal">Healt for All</p>
+        <p class="text-sm text-green-600 font-normal">{{ user?.isSubscribed === false ? 'Single User' : 'Premium User' }}</p>
         <div class="members-quantity flex flex-row items-center text-green-700">
           <mat-icon class="flex text-lg w-0 h-0 -mt-1.5" aria-hidden="false" aria-label="team icon" fontIcon="person"></mat-icon>
           <span class="text-sm">23</span>
