--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -7,6 +7,12 @@
       </div>
       <div class="flex flex-row gap-3 self-center">
         <button
+          class="flex items-center bg-indigo-900 text-slate-50 gap-1 px-4 py-1.5 rounded-2xl" routerLink="/events/new-event" routerLinkActive="active">
+          Create new event
+          <mat-icon class="text-xl w-0 h-0 mb-1" fontIcon="add_circle_outline"></mat-icon>
+
+        </button>
+        <button
           (click)="refreshEvents()"
           class="bg-slate-100 px-3 hover:bg-slate-300 transition-all duration-300 ease rounded-lg">
           <mat-icon
