feature/add-user-review

--- a/src/app/components/specialist/user-reviews/user-reviews.component.html
+++ b/src/app/components/specialist/user-reviews/user-reviews.component.html
@@ -15,4 +15,8 @@
             </mat-card-content>
         </mat-card>
     </div>
+
+    <div class="flex justify-end mt-4">
+        <button mat-raised-button color="primary" (click)="openAddReview()">Add Review</button>
+      </div>
 </section>
