--- a/src/app/pages/specialist/specialist.component.html
+++ b/src/app/pages/specialist/specialist.component.html
@@ -1,5 +1,5 @@
 <div>
     <app-information-profile [specialistData]="specialistData" (clickedPopup)="onClickPopup()"></app-information-profile>
-    <app-user-reviews [specialistReviewData]="specialistReviewData"></app-user-reviews>
+    <app-user-reviews [specialistReviewData]="specialistReviewData" (addReview)="openAddReviewModal()"></app-user-reviews>
     <app-make-appointment [specialistData]="specialistData" [specialistCalendarData]="specialistCalendarData" [showPopup]="showPopup" (clickedPopup)="onClickPopup()"></app-make-appointment>
 </div>
