feat: edit profile changes

--- a/src/app/pages/editprofile/editprofile.component.html
+++ b/src/app/pages/editprofile/editprofile.component.html
@@ -1,14 +1,15 @@
-<div class="popup">
-  <h2 class="pb-[10px]">Edit Profile:</h2>
+<!--
+<section *ngIf="showPopup" class="popup">
   <div class="popup-content p-[30px] md:p-[50px]">
-    <form  (ngSubmit)="onSubmit()" #userForm="ngForm">
-      <div class="flex gap-[20px] items-center">
-        <p>Name</p>
-        <mat-form-field class="w-full max-w-[70%]">
+  @if(!editeProfile) {
+    <h2 class="pb-[10px]">Edit Profile:</h2>
+    <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">First Name</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
-            placeholder="Name of User"
+            placeholder="First Name of User"
             name="firstName"
             required
             [(ngModel)]="userData.firstName"
@@ -16,13 +17,12 @@
         </mat-form-field>
       </div>
 
-      <div class="flex gap-[20px] items-center">
-        <p>LastName</p>
-        <mat-form-field class="w-full max-w-[70%]">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">Last Name</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
-            placeholder="LastName of User"
+            placeholder="Last Name of User"
             name="lastName"
             required
             [(ngModel)]="userData.lastName"
@@ -30,11 +30,10 @@
         </mat-form-field>
       </div>
 
-      <div class="flex gap-[20px] items-center">
-        <p>Biography</p>
-        <mat-form-field class="w-full max-w-[70%]">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">Biography</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
             placeholder="Biography of User"
             name="biography"
@@ -44,11 +43,10 @@
         </mat-form-field>
       </div>
 
-      <div class="flex gap-[20px] items-center">
-        <p>UserName</p>
-        <mat-form-field class="w-full max-w-[70%]">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">Username</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
             placeholder="Username of User"
             name="username"
@@ -58,13 +56,12 @@
         </mat-form-field>
       </div>
 
-      <div class="flex gap-[20px] items-center">
-        <p>Email</p>
-        <mat-form-field class="w-full max-w-[70%]">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">Email</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
-            placeholder="Email of Specialist"
+            placeholder="Email of User"
             name="email"
             type="email"
             required
@@ -73,11 +70,10 @@
         </mat-form-field>
       </div>
 
-      <div class="flex gap-[20px] items-center">
-        <p>Password</p>
-        <mat-form-field class="w-full max-w-[70%]">
+      <div class="flex gap-[20px] items-center mb-4">
+        <p class="w-1/4">Password</p>
+        <mat-form-field class="w-3/4">
           <input
-            class="border border-black"
             matInput
             placeholder="Password of User"
             name="password"
@@ -90,21 +86,150 @@
       <div class="flex gap-[20px] items-center justify-end mt-[20px]">
         <button
           mat-raised-button
-          class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
+          class="bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
           type="submit"
         >
           Edit
         </button>
         <button
           mat-raised-button
-          class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
+          class="bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
           type="button"
-          (click)="onCancel()"
+          (click)="clickedPopup.emit()"
         >
           Cancel
         </button>
       </div>
     </form>
+  } @else {
+    <div class="flex flex-col gap-[20px] items-center">
+      <img src="../../../assets/check.svg" alt="Check Icon" />
+      <h2>Your appointment was successfully registered!</h2>
+      <div class="flex gap-[20px] items-center justify-center">
+        <button class="flex items-center bg-[#C3E8D6] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase" mat-raised-button (click)="goToPage('/')" >Go to Home</button>
+        <button class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase" mat-raised-button (click)="goToPage('/calendar')">Go to Calendar</button>
+      </div>
+    </div>
+  }
   </div>
-</div>
+</section>
+-->
+
+
+<section *ngIf="showPopup" class="popup">
+  <div class="popup-content p-[30px] md:p-[50px]">
+    <ng-container *ngIf="!editProfile; else successTemplate">
+      <h2 class="pb-[10px]">Edit Profile:</h2>
+      <form (ngSubmit)="onSubmit()" #userForm="ngForm">
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">First Name</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="First Name of User"
+              name="firstName"
+              required
+              [(ngModel)]="userData.firstName"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">Last Name</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="Last Name of User"
+              name="lastName"
+              required
+              [(ngModel)]="userData.lastName"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">Biography</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="Biography of User"
+              name="biography"
+              required
+              [(ngModel)]="userData.biography"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">Username</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="Username of User"
+              name="username"
+              required
+              [(ngModel)]="userData.username"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">Email</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="Email of User"
+              name="email"
+              type="email"
+              required
+              [(ngModel)]="userData.email"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center mb-4">
+          <p class="w-1/4">Password</p>
+          <mat-form-field class="w-3/4">
+            <input
+              matInput
+              placeholder="Password of User"
+              name="password"
+              required
+              [(ngModel)]="userData.password"
+            />
+          </mat-form-field>
+        </div>
+
+        <div class="flex gap-[20px] items-center justify-end mt-[20px]">
+          <button
+            mat-raised-button
+            class="bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
+            type="submit"
+          >
+            Edit
+          </button>
+          <button
+            mat-raised-button
+            class="bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase"
+            type="button"
+            (click)="clickedPopup.emit()"
+          >
+            Cancel
+          </button>
+        </div>
+      </form>
+    </ng-container>
+
+    <ng-template #successTemplate>
+      <div class="flex flex-col gap-[20px] items-center">
+        <img src="../../../assets/check.svg" alt="Check Icon" />
+        <h2>Your profile was successfully updated!</h2>
+        <div class="flex gap-[20px] items-center justify-center">
+          <button class="flex items-center bg-[#C3E8D6] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase" mat-raised-button (click)="goToPage('/')">Go to Home</button>
+          <button class="flex items-center bg-[#CAFDF4] text-black border border-black gap-1 px-[35px] py-[12.5px] rounded-full uppercase" mat-raised-button (click)="goToPage('/calendar')">Go to Calendar</button>
+        </div>
+      </div>
+    </ng-template>
+  </div>
+</section>
 
