--- a/src/app/components/profile/profile-content/profile-content.component.html
+++ b/src/app/components/profile/profile-content/profile-content.component.html
@@ -13,7 +13,7 @@
         muy joven. Su primer encuentro con la programación fue a los 12 años, cuando su tío le regaló un viejo ordenador
         y un libro de programación en BASIC.</p>
     </div>
-    <div class="w-full flex flex-col gap-5 items-center border-2">
+    <div class="w-full flex flex-col gap-5 items-center">
       <img class="max-w-[400px] w-full flex mx-auto min-h-[400px] object-cover rounded-xl" src="{{user.profileImg}}"
            alt="{{ user.firstName + ' ' + user.lastName + ' Image Profile' }}"/>
     </div>
